--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,3 +16,8 @@ input, textarea, [contenteditable="true"], [contenteditable=""] {
   -moz-user-select: text;
   -ms-user-select: text;
 }
+
+/* Subject count badge with transparent background */
+.subject-count-badge {
+  background-color: rgba(0, 0, 0, 0.4);
+}
